static/css/base.css
/* -----Main CSS  */

html {
    height: 100%;
}

#topnav {
    background-color: #008080;
}

body {
    background: url('/media/main-vinyl.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Montserrat';
}

.navbar {
    background-color: #029bab;
}

.nav-link {
    color: white !important;
}

.dropdown-menu {
    background-color: #029bab;
}

.dropdown-item {
    color: white;
}


/* from Bulma */

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.main-logo-link {
    width: fit-content;
}

.main-heading {
    text-align: center;
}

.text-shadow {
    text-shadow: 2px 2px #000;
}

.shop-now-button {
    background: white;
    color: #008080;
    min-width: 300px;
}

.btn-black {
    background: black;
    color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #008080;
    color: white;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background-image: linear-gradient(#e1f5f4, #ffffff);
	z-index: -1;
}

a.category-badge {
    background: white !important;
    color: #008080 !important;
}

a.category-badge > span.badge:hover {
    background: #008080 !important;
    color: #fff !important;
}

.btt-button {
    height: 30px;
    width: 30px;
    position: fixed;
    bottom: 15px;
    left: 15px;
    color: #029bab;
    font-size: xx-large !important;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.text-black {
    color: #000 !important;
}

/* ----- Toast styling */

.message-container {
    position: fixed;
    top: 166px;
    left: 15%;
    z-index: 99999999999;
}

.toast-capper {
    height: 3px;
}

.custom-toast {
    overflow: visible;
}

/* ----- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 10000;
    }

    .header-container {
        padding-top: 164px;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }
}

